# MeteorologicalCenter

./: .dockerignore  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: cd.yml  deploy.yml  harbor.yml  pipeline.yml  rust-test.yml
.husky/: pre-commit
apps/controller/: .env.example  Cargo.toml  Dockerfile  build.rs
apps/controller/proto/: crawler.proto
apps/controller/src/: crawler.rs  lib.rs  main.rs  task.rs
apps/earthquake/: .env.development  .env.production  Dockerfile  package.json
apps/earthquake/src/: app.module.ts  main.ts
apps/earthquake/src/earthquake/: earthquake.controller.spec.ts  earthquake.controller.ts  earthquake.module.ts  earthquake.service.spec.ts  earthquake.service.ts
apps/earthquake/src/earthquake/entites/: earthquake-by-date.entity.ts  earthquake.entity.ts
apps/earthquake/src/influx/: influx.module.ts  influx.service.spec.ts  influx.service.ts
apps/taipower/: .env.example  001.csv  Dockerfile  client.py  crawler.py  crawler_pb2.py  crawler_pb2_grpc.py  init.py  power_data.proto  power_data_pb2.py  power_data_pb2_grpc.py  requirements.txt  server.py  test_crawler.py
apps/taipower/test/: 001.csv
apps/water/: .env.example  Dockerfile  gen_proto.sh  init.py  main.py  requirements.txt  reservoir.csv  reservoir.json  server.py  test_crawler.py  water.py
